name:                cbladmin
version:             0.2.4
synopsis:            Script to keep an Arch Linux repository from Hackage
description:         This script uses cblrepo and cabal to create and update an Arch Linux repository,
                     taking packages from the Hackage database.
license:             Apache-2.0
author:              Fabio Riga
maintainer:          rifabio@gmail.com
copyright:           (c) 2012 Fabio Riga
stability:           alpha
category:            Distribution
build-type:          Simple
bug-reports:         mailto:rifabio@gmail.com
cabal-version:       >= 1.8

executable cbladmin
    hs-source-dirs:  src
    main-is:         CblAdmin.hs
    extensions:      EmptyDataDecls
    build-depends:   base      >= 4.5 && < 4.7,
                     bytestring == 0.10.*,
                     aeson     >= 0.7,
                     text      == 0.11.*,
                     Cabal     >= 1.14,
                     json      >= 0.5 && < 0.8,
                     process   == 1.1.*,
                     directory >= 1.1 && < 1.3,
                     filepath  == 1.3.*,
                     MissingH  >= 1.1 && < 1.3,
                     hflags    == 0.1.*
